loaded some data into league db

--- a/kevin.ipynb
+++ b/kevin.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -51,13 +51,20 @@
    ],
    "source": [
     "def get_player_gamelogs(player_id, season):\n",
-    "    # given a player id (int or string) and a season (string, ex: 2016-17), returns a (header, log_list) where the\n",
-    "    # header represents a key describing the format of a log in log list\n",
+    "    \"\"\" Given a player id (int or string) and a season (string, ex: 2016-17), returns a (header, log_list) where the\n",
+    "        header represents a key describing the format of a log in log list\n",
+    "    Input:\n",
+    "        player_id (int or string): player ID number\n",
+    "        season (str): season string, ex: 2016-17\n",
+    "    Output:\n",
+    "        (header, log_list): header is a key describing the format of a log in log list\n",
+    "    \"\"\"\n",
     "    \n",
     "    player_url = (\"http://stats.nba.com/stats/playergamelog?DateFrom=&DateTo=&LeagueID=00&PlayerID=\" \n",
     "                  + str(player_id) + \"&Season=\" + season + \"&SeasonType=Regular+Season\")\n",
+    "    headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:39.0) Gecko/20100101 Firefox/39.0'}\n",
     "    # request the URL and parse the JSON\n",
-    "    response = requests.get(player_url)\n",
+    "    response = requests.get(player_url, headers = headers)\n",
     "    response.raise_for_status() # raise exception if invalid response\n",
     "    response_json = response.json()\n",
     "    log_list = response_json['resultSets'][0]['rowSet']\n",
@@ -84,29 +91,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-0fa2a35d9bc0>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-0fa2a35d9bc0>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    SELECT count(*) FROM sqlite_master WHERE type='table' AND name='table_name';\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def get_all_team_gamelogs(player_id, season):\n",
-    "    # given a player id (int or string) and a season (string, ex: 2016-17), returns a (header, log_list) where the\n",
-    "    # header represents a key describing the format of a log in log list\n",
-    "    \n",
-    "    player_url = (\"http://stats.nba.com/stats/playergamelog?DateFrom=&DateTo=&LeagueID=00&PlayerID=\" \n",
-    "                  + str(player_id) + \"&Season=\" + season + \"&SeasonType=Regular+Season\")\n",
+    "def get_league_gamelogs(season):\n",
+    "    \"\"\" Given a season (string, ex: 2016-17), returns a (header, log_list) where the\n",
+    "        header represents a key describing the format of a log in log list\n",
+    "    Input:\n",
+    "        season (str): season string, ex: 2016-17\n",
+    "    Output:\n",
+    "        (header, log_list): header is a key describing the format of a log in log list\n",
+    "    \"\"\"\n",
+    "    league_log_url = (\"http://stats.nba.com/stats/leaguegamelog?Counter=1000&DateFrom=&DateTo=&\" + \n",
+    "                  \"Direction=DESC&LeagueID=00&PlayerOrTeam=T&Season=\" + str(season) + \n",
+    "                  \"&SeasonType=Regular+Season&Sorter=PTS\")\n",
+    "    headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:39.0) Gecko/20100101 Firefox/39.0'}\n",
+    "\n",
     "    # request the URL and parse the JSON\n",
-    "    response = requests.get(player_url)\n",
+    "    response = requests.get(league_log_url, headers = headers)\n",
     "    response.raise_for_status() # raise exception if invalid response\n",
     "    response_json = response.json()\n",
     "    log_list = response_json['resultSets'][0]['rowSet']\n",
@@ -137,11 +142,8 @@
     "    Output:\n",
     "        None\n",
     "    \"\"\"\n",
+    "    pass\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
     "def load_all_gamelogs(conn, yrs):\n",
     "    \"\"\" Load nba gamelog data for the past yrs years as a games tables into an SQLite database given in conn\n",
     "    Input:\n",
@@ -156,23 +158,286 @@
     "    # hardcode for now\n",
     "    year_list = ['2010-11', '2011-12', '2012-13', '2013-14', '2015-16', '2016-17']\n",
     "    \n",
+    "    # clear league_log table\n",
+    "    cursor.execute('drop table if exists league_log')\n",
+    "    \n",
+    "    # create big table\n",
+    "    cursor.execute(\"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS league_log (\n",
+    "    season_id TEXT, \n",
+    "    team_id INTEGER,\n",
+    "    team_abbreviation TEXT,\n",
+    "    team_name TEXT,\n",
+    "    game_id INTEGER,\n",
+    "    game_date INTEGER,\n",
+    "    matchup INTEGER,\n",
+    "    wl STRING,\n",
+    "    min INTEGER,\n",
+    "    fgm INTEGER,\n",
+    "    fga INTEGER,\n",
+    "    fg_pct REAL,\n",
+    "    fg3m INTEGER,\n",
+    "    fg3a INTEGER,\n",
+    "    fg3_pct REAL,\n",
+    "    ftm INTEGER,\n",
+    "    fta INTEGER,\n",
+    "    ft_pct REAL,\n",
+    "    oreb INTEGER,\n",
+    "    dreb INTEGER,\n",
+    "    reb INTEGER,\n",
+    "    ast INTEGER,\n",
+    "    stl INTEGER,\n",
+    "    blk INTEGER,\n",
+    "    tov INTEGER,\n",
+    "    pf INTEGER,\n",
+    "    pts INTEGER,\n",
+    "    plus_minus INTEGER\n",
+    "    )\"\"\")\n",
+    "    \n",
     "    for year in year_list:\n",
+    "        (header, log_list) = get_league_gamelogs(year)\n",
+    "        print header\n",
     "        \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "        question_marks = \"(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ? ,?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\"\n",
+    "        query_string = \"INSERT INTO league_log VALUES \" + question_marks\n",
+    "        for log in log_list:\n",
+    "            cursor.execute(query_string,\n",
+    "                          (log[0],log[1],log[2],log[3],log[4],log[5],log[6],log[7],\n",
+    "                          log[8], log[9], log[10], log[11], log[12], log[13], log[14],\n",
+    "                          log[15],log[16], log[17], log[18], log[19], log[20], log[21],\n",
+    "                          log[22], log[23], log[24], log[25], log[26], log[27]))\n",
+    "            \n",
+    "    conn.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'SEASON_ID', u'TEAM_ID', u'TEAM_ABBREVIATION', u'TEAM_NAME', u'GAME_ID', u'GAME_DATE', u'MATCHUP', u'WL', u'MIN', u'FGM', u'FGA', u'FG_PCT', u'FG3M', u'FG3A', u'FG3_PCT', u'FTM', u'FTA', u'FT_PCT', u'OREB', u'DREB', u'REB', u'AST', u'STL', u'BLK', u'TOV', u'PF', u'PTS', u'PLUS_MINUS', u'VIDEO_AVAILABLE']\n",
+      "[u'SEASON_ID', u'TEAM_ID', u'TEAM_ABBREVIATION', u'TEAM_NAME', u'GAME_ID', u'GAME_DATE', u'MATCHUP', u'WL', u'MIN', u'FGM', u'FGA', u'FG_PCT', u'FG3M', u'FG3A', u'FG3_PCT', u'FTM', u'FTA', u'FT_PCT', u'OREB', u'DREB', u'REB', u'AST', u'STL', u'BLK', u'TOV', u'PF', u'PTS', u'PLUS_MINUS', u'VIDEO_AVAILABLE']\n",
+      "[u'SEASON_ID', u'TEAM_ID', u'TEAM_ABBREVIATION', u'TEAM_NAME', u'GAME_ID', u'GAME_DATE', u'MATCHUP', u'WL', u'MIN', u'FGM', u'FGA', u'FG_PCT', u'FG3M', u'FG3A', u'FG3_PCT', u'FTM', u'FTA', u'FT_PCT', u'OREB', u'DREB', u'REB', u'AST', u'STL', u'BLK', u'TOV', u'PF', u'PTS', u'PLUS_MINUS', u'VIDEO_AVAILABLE']\n",
+      "[u'SEASON_ID', u'TEAM_ID', u'TEAM_ABBREVIATION', u'TEAM_NAME', u'GAME_ID', u'GAME_DATE', u'MATCHUP', u'WL', u'MIN', u'FGM', u'FGA', u'FG_PCT', u'FG3M', u'FG3A', u'FG3_PCT', u'FTM', u'FTA', u'FT_PCT', u'OREB', u'DREB', u'REB', u'AST', u'STL', u'BLK', u'TOV', u'PF', u'PTS', u'PLUS_MINUS', u'VIDEO_AVAILABLE']\n",
+      "[u'SEASON_ID', u'TEAM_ID', u'TEAM_ABBREVIATION', u'TEAM_NAME', u'GAME_ID', u'GAME_DATE', u'MATCHUP', u'WL', u'MIN', u'FGM', u'FGA', u'FG_PCT', u'FG3M', u'FG3A', u'FG3_PCT', u'FTM', u'FTA', u'FT_PCT', u'OREB', u'DREB', u'REB', u'AST', u'STL', u'BLK', u'TOV', u'PF', u'PTS', u'PLUS_MINUS', u'VIDEO_AVAILABLE']\n",
+      "[u'SEASON_ID', u'TEAM_ID', u'TEAM_ABBREVIATION', u'TEAM_NAME', u'GAME_ID', u'GAME_DATE', u'MATCHUP', u'WL', u'MIN', u'FGM', u'FGA', u'FG_PCT', u'FG3M', u'FG3A', u'FG3_PCT', u'FTM', u'FTA', u'FT_PCT', u'OREB', u'DREB', u'REB', u'AST', u'STL', u'BLK', u'TOV', u'PF', u'PTS', u'PLUS_MINUS', u'VIDEO_AVAILABLE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect(r\"db/league.db\")\n",
+    "conn.text_factory = str\n",
+    "load_all_gamelogs(conn, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season_id</th>\n",
+       "      <th>team_id</th>\n",
+       "      <th>team_abbreviation</th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>matchup</th>\n",
+       "      <th>wl</th>\n",
+       "      <th>min</th>\n",
+       "      <th>fgm</th>\n",
+       "      <th>...</th>\n",
+       "      <th>oreb</th>\n",
+       "      <th>dreb</th>\n",
+       "      <th>reb</th>\n",
+       "      <th>ast</th>\n",
+       "      <th>stl</th>\n",
+       "      <th>blk</th>\n",
+       "      <th>tov</th>\n",
+       "      <th>pf</th>\n",
+       "      <th>pts</th>\n",
+       "      <th>plus_minus</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22010</td>\n",
+       "      <td>1610612754</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>Indiana Pacers</td>\n",
+       "      <td>21000101</td>\n",
+       "      <td>2010-11-09</td>\n",
+       "      <td>IND vs. DEN</td>\n",
+       "      <td>W</td>\n",
+       "      <td>240</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>35</td>\n",
+       "      <td>45</td>\n",
+       "      <td>37</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>20</td>\n",
+       "      <td>144</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22010</td>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>Los Angeles Lakers</td>\n",
+       "      <td>21001053</td>\n",
+       "      <td>2011-03-22</td>\n",
+       "      <td>LAL vs. PHX</td>\n",
+       "      <td>W</td>\n",
+       "      <td>315</td>\n",
+       "      <td>53</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>38</td>\n",
+       "      <td>56</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>139</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22010</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>21001079</td>\n",
+       "      <td>2011-03-25</td>\n",
+       "      <td>GSW vs. TOR</td>\n",
+       "      <td>W</td>\n",
+       "      <td>240</td>\n",
+       "      <td>51</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>33</td>\n",
+       "      <td>40</td>\n",
+       "      <td>33</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>22</td>\n",
+       "      <td>138</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22010</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>Denver Nuggets</td>\n",
+       "      <td>21000248</td>\n",
+       "      <td>2010-11-28</td>\n",
+       "      <td>DEN vs. PHX</td>\n",
+       "      <td>W</td>\n",
+       "      <td>240</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>34</td>\n",
+       "      <td>49</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>138</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22010</td>\n",
+       "      <td>1610612756</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>Phoenix Suns</td>\n",
+       "      <td>21001053</td>\n",
+       "      <td>2011-03-22</td>\n",
+       "      <td>PHX @ LAL</td>\n",
+       "      <td>L</td>\n",
+       "      <td>315</td>\n",
+       "      <td>51</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>42</td>\n",
+       "      <td>52</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>24</td>\n",
+       "      <td>137</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  season_id     team_id team_abbreviation              team_name   game_id  \\\n",
+       "0     22010  1610612754               IND         Indiana Pacers  21000101   \n",
+       "1     22010  1610612747               LAL     Los Angeles Lakers  21001053   \n",
+       "2     22010  1610612744               GSW  Golden State Warriors  21001079   \n",
+       "3     22010  1610612743               DEN         Denver Nuggets  21000248   \n",
+       "4     22010  1610612756               PHX           Phoenix Suns  21001053   \n",
+       "\n",
+       "    game_date      matchup wl  min  fgm     ...      oreb  dreb  reb  ast  \\\n",
+       "0  2010-11-09  IND vs. DEN  W  240   56     ...        10    35   45   37   \n",
+       "1  2011-03-22  LAL vs. PHX  W  315   53     ...        18    38   56   30   \n",
+       "2  2011-03-25  GSW vs. TOR  W  240   51     ...         7    33   40   33   \n",
+       "3  2010-11-28  DEN vs. PHX  W  240   43     ...        15    34   49   28   \n",
+       "4  2011-03-22    PHX @ LAL  L  315   51     ...        10    42   52   34   \n",
+       "\n",
+       "   stl  blk  tov  pf  pts  plus_minus  \n",
+       "0    7    7   14  20  144          31  \n",
+       "1   10    5    9  18  139           2  \n",
+       "2   12    5   10  22  138          38  \n",
+       "3    5    7   10  26  138           5  \n",
+       "4    3    5   13  24  137          -2  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_sql_query('SELECT * FROM league_log', conn)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
