added a validation function

--- a/kevin.ipynb
+++ b/kevin.ipynb
@@ -438,6 +438,53 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "We have now loaded some league game logs into our database `league.db`. We can now write some data validation functions for our data, as we might be missing certain games."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def validate_data(df):\n",
+    "    year_list = df['season_id'].unique().tolist()\n",
+    "    \n",
+    "    for year in year_list:\n",
+    "        df_temp = df[df['season_id'] == year]\n",
+    "        \n",
+    "        if year == '22011':\n",
+    "            # lockout year\n",
+    "            assert(df_temp.shape[0] == 1980)\n",
+    "        elif year == '22016':\n",
+    "            # current ongoing year\n",
+    "            continue\n",
+    "        else:\n",
+    "            #normal 82 game sched\n",
+    "            assert(df_temp.shape[0] == 2460) \n",
+    "        \n",
+    "validate_data(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing and Understanding the Data\n",
+    "Now that we have stored key data points on each game, we wish to process the data to describe key features of our data, and then better understand these features through analyses and visualizations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
